<resources>
    <string name="app_name">Photo Editor</string>
    <string name="app_brand">Zest</string>

    <!--home-->
    <string name="camera">Camera</string>
    <string name="remove_objects">Remove Objects</string>

    <!--general-->
    <string name="save">Save</string>
    <string name="edit">Edit</string>
    <string name="smoothed">Smoothed</string>
    <string name="edges">Edges</string>
    <string name="fade">Fade</string>
    <string name="none">None</string>

    <!--Tools-->
    <string name="crop">Crop</string>
    <string name="remove">Remove</string>
    <string name="enhance">Enhance</string>
    <string name="filter">Filter</string>
    <string name="adjust">Adjust</string>
    <string name="effect">Effect</string>
    <string name="beautify">Beautify</string>

    <!--crop-->
    <string name="transform">Transform</string>
    <string name="horizontal">Horizontal</string>
    <string name="vertical">Vertical</string>
    <string name="rotate">Rotate</string>
    <string name="erase">Erase</string>

    <!--enhance-->
    <string name="auto">Auto</string>
    <string name="denoising">Denoising</string>
    <string name="detailing">Detailing</string>
    <string name="gold">Gold</string>
    <string name="hdr">HDR</string>
    <string name="bnw"><![CDATA[B&W]]></string>

    <!--adjust-->
    <string name="brightness">Brightness</string>
    <string name="contrast">Contrast</string>
    <string name="vignette">Vignette</string>  <!--black rounded corner shadow setCrossFade()-->
    <string name="saturation">Saturation</string>
    <string name="temp">Temp</string>    <!--Warmth-->

    <!--effect-->
    <string name="highpass">High Pass</string>
    <string name="pastelsketch">Pastel Sketch</string>
    <string name="newsprint">News Print</string>
    <string name="oldfilm">Old Film</string>
    <string name="motionblur">Motion Blur</string>
    <string name="pencilsketch">Pencil Sketch</string>
    <string name="hsv">HSV</string>
    <string name="brush">Brush</string>


</resources>