<?xml version="1.0" encoding="utf-8"?>
<com.google.android.material.appbar.AppBarLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/app_bar_save"
    android:layout_width="match_parent"
    android:layout_height="46dp"
    android:background="@color/black"
    app:elevation="0dp">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginHorizontal="5dp">

        <ImageView
            android:id="@+id/icon_back"
            android:layout_width="42dp"
            android:layout_height="match_parent"
            android:padding="8dp"
            android:src="@drawable/ic_arrow_back_24"
            app:tint="@color/whiteIcon" />


        <TextView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_alignParentStart="true"
            android:layout_alignParentEnd="true"
            android:gravity="center"
            android:text="@string/app_brand"
            android:textColor="@color/white"
            android:textSize="@dimen/medium" />

        <androidx.appcompat.widget.LinearLayoutCompat
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_alignParentEnd="true"
            android:gravity="center"
            tools:ignore="RelativeOverlap">

            <com.google.android.material.button.MaterialButton
                android:id="@+id/remove"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:minWidth="0dp"
                android:minHeight="0dp"
                android:text="@string/remove"
                android:textColor="@color/white"
                android:textSize="@dimen/small"
                app:backgroundTint="@color/burntOrange" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/icon_done"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:minWidth="0dp"
                android:minHeight="0dp"
                android:text="@string/save"
                android:textColor="@color/white"
                android:textSize="@dimen/small"
                app:backgroundTint="@color/surfieGreen" />


        </androidx.appcompat.widget.LinearLayoutCompat>

    </RelativeLayout>

</com.google.android.material.appbar.AppBarLayout>