<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background"
    tools:context=".HomeActivity">

    <include
        android:id="@+id/include"
        layout="@layout/app_bar_home" />

    <androidx.appcompat.widget.LinearLayoutCompat
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/include">

        <androidx.appcompat.widget.LinearLayoutCompat
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:weightSum="3">

            <Space
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:layout_weight="0.5" />

            <com.google.android.material.card.MaterialCardView
                android:id="@+id/card_removeObject"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="2"
                android:backgroundTint="@color/gray"
                android:visibility="gone"
                app:cardCornerRadius="10dp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="120dp"
                    android:layout_gravity="center"
                    android:gravity="center"
                    android:orientation="vertical">

                    <ImageView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:padding="10dp"
                        android:src="@drawable/tool_remove"
                        tools:ignore="ContentDescription" />

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:gravity="center"
                        android:text="@string/remove_objects"
                        android:textSize="@dimen/medium" />

                </LinearLayout>
            </com.google.android.material.card.MaterialCardView>

            <Space
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:layout_weight="0.5" />


        </androidx.appcompat.widget.LinearLayoutCompat>


        <androidx.appcompat.widget.LinearLayoutCompat
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:gravity="center"
            android:orientation="horizontal"
            android:padding="10dp"
            android:weightSum="2">

            <Space
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:layout_weight="0.5" />

            <com.google.android.material.card.MaterialCardView
                android:id="@+id/card_edit"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:backgroundTint="@color/gray"
                app:cardCornerRadius="10dp">

                <LinearLayout
                    android:layout_width="120dp"
                    android:layout_height="120dp"
                    android:gravity="center"
                    android:orientation="vertical">

                    <ImageView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:padding="10dp"
                        android:src="@drawable/ic_round_add_to_photos_24"
                        tools:ignore="ContentDescription" />

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:gravity="center"
                        android:text="@string/edit"
                        android:textSize="@dimen/medium" />

                </LinearLayout>
            </com.google.android.material.card.MaterialCardView>

            <Space
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:layout_weight="0.5" />

            <com.google.android.material.card.MaterialCardView
                android:id="@+id/card_camera"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:backgroundTint="@color/gray"
                app:cardCornerRadius="10dp">

                <LinearLayout
                    android:layout_width="120dp"
                    android:layout_height="120dp"
                    android:gravity="center"
                    android:orientation="vertical">

                    <ImageView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:padding="10dp"
                        android:src="@drawable/ic_round_camera_enhance_24"
                        tools:ignore="ContentDescription" />

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:gravity="center"
                        android:text="@string/camera"
                        android:textSize="@dimen/medium" />

                </LinearLayout>

            </com.google.android.material.card.MaterialCardView>

            <Space
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:layout_weight="0.5" />
        </androidx.appcompat.widget.LinearLayoutCompat>


    </androidx.appcompat.widget.LinearLayoutCompat>

</androidx.constraintlayout.widget.ConstraintLayout>